Detect the required Java version from the failure log (#3015)
* Detect the required Java version from the failure log

* Optionally suppress log output for large runs

* Add license headers