@@ -1,5 +1,5 @@
 /*
- * Copyright 2022 the original author or authors.
+ * Copyright 2023 the original author or authors.
  * <p>
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,14 +17,25 @@ package org.openrewrite;
 
 import lombok.EqualsAndHashCode;
 import lombok.Value;
+import org.openrewrite.internal.lang.Nullable;
 import org.openrewrite.marker.BuildToolFailure;
 import org.openrewrite.marker.Markup;
 import org.openrewrite.table.BuildToolFailures;
+
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+import java.util.stream.Stream;
 
 @Value
 @EqualsAndHashCode(callSuper = true)
 public class FindBuildToolFailures extends Recipe {
     BuildToolFailures failures = new BuildToolFailures(this);
+
+    @Option(displayName = "Suppress log output",
+            description = "Default false. If true, the `logOutput` column will be empty in the output table.",
+            required = false)
+    @Nullable
+    Boolean suppressLogOutput;
 
     @Override
     public String getDisplayName() {
@@ -44,17 +55,65 @@ public class FindBuildToolFailures extends Recipe {
             public Tree visitSourceFile(SourceFile sourceFile, ExecutionContext ctx) {
                 return sourceFile.getMarkers().findFirst(BuildToolFailure.class)
                         .<Tree>map(failure -> {
+                            String logFileContents = sourceFile.printAll();
+                            String requiredJavaVersion = FailureLogAnalyzer.requiredJavaVersion(logFileContents);
+                            if (suppressLogOutput != null && suppressLogOutput) {
+                                logFileContents = "";
+                            }
                             failures.insertRow(ctx, new BuildToolFailures.Row(
                                     failure.getType(),
                                     failure.getVersion(),
                                     failure.getCommand(),
                                     failure.getExitCode(),
-                                    sourceFile.printAll()
+                                    requiredJavaVersion,
+                                    logFileContents
                             ));
                             return Markup.info(sourceFile, String.format("Exit code %d", failure.getExitCode()));
                         })
                         .orElse(sourceFile);
             }
         };
+    }
+}
+
+class FailureLogAnalyzer {
+
+    private static final Pattern CLASS_FILE_MAJOR_VERSION = Pattern.compile("class file (?:major )?version (\\d+)");
+    private static final String INVALID_FLAG_RELEASE = "invalid flag: --release";
+    private static final String ADD_EXPORTS = "Unrecognized option: --add-exports";
+
+    private static final Pattern BAD_OPTION_WAS_IGNORED = Pattern.compile("bad option '-target:(\\d+)' was ignored");
+    private static final Pattern INCOMPATIBLE_COMPONENT = Pattern.compile("Incompatible because this component declares a component compatible with Java (\\d+)");
+    private static final Pattern INVALID_SOURCE_TARGET_RELEASE = Pattern.compile("invalid (?:source|target) release: (\\d+)");
+    private static final Pattern RELEASE_VERSION_NOT_SUPPORTED = Pattern.compile("release version (\\d+) not supported");
+    private static final Pattern SOURCE_TARGET_OBSOLETE = Pattern.compile("(?:source|target) value (?:1\\.)?(\\d+) is obsolete", Pattern.CASE_INSENSITIVE);
+    private static final Pattern SOURCE_TARGET_OPTION = Pattern.compile("(?:Source|Target) option \\d+ is no longer supported. Use (\\d+) or later", Pattern.CASE_INSENSITIVE);
+    private static final Pattern TOOLCHAIN = Pattern.compile("\\[ERROR] jdk \\[ version='(?:1\\.)?(\\d+)' ]");
+    private static final Pattern USE_SOURCE = Pattern.compile("use -source (\\d+) or higher to enable");
+
+    @Nullable
+    static String requiredJavaVersion(String logFileContents) {
+        Matcher matcher = CLASS_FILE_MAJOR_VERSION.matcher(logFileContents);
+        if (matcher.find()) {
+            // https://docs.oracle.com/javase/specs/jvms/se20/html/jvms-4.html#jvms-4.1-200-B.2
+            return String.valueOf(Integer.parseInt(matcher.group(1)) - 44);
+        }
+        if (logFileContents.contains(INVALID_FLAG_RELEASE) || logFileContents.contains(ADD_EXPORTS)) {
+            return "11"; // Technically 9+, but we'll go for 11 as it's an LTS release
+        }
+        return Stream.of(
+                        BAD_OPTION_WAS_IGNORED,
+                        INCOMPATIBLE_COMPONENT,
+                        INVALID_SOURCE_TARGET_RELEASE,
+                        RELEASE_VERSION_NOT_SUPPORTED,
+                        SOURCE_TARGET_OBSOLETE,
+                        SOURCE_TARGET_OPTION,
+                        TOOLCHAIN,
+                        USE_SOURCE)
+                .map(pattern -> pattern.matcher(logFileContents))
+                .filter(Matcher::find)
+                .map(m -> m.group(1))
+                .findFirst()
+                .orElse(null);
     }
 }
